--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "babel-eslint": "^7.0.0",
+    "eslint": "^3.0.0",
+    "eslint-config-eventbrite-react": "^5.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^6.0.0",
+    "eslint-plugin-react": "^6.0.0",
     "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
