Improve getDisplayHour helper function, add eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
     "extends": "eventbrite-react",
+    "rules": {
+      "no-invalid-this": 0
+    },
     "env": {
       "browser": "true"
     }
